Module9/croc-hunt/croc.yaml
---
# Source: croc-hunter/templates/croc-hunter.yaml
apiVersion: v1
kind: Service
metadata:
  name: washing-panther-croc-hunter
  labels:
    heritage: "Tiller"
    release: "washing-panther"
    chart: "croc-hunter-0.3.1"
    component: "washing-panther-croc-hunter"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    component: "washing-panther-croc-hunter"
  type: "NodePort"
---
# Source: croc-hunter/templates/croc-hunter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: washing-panther-croc-hunter
  labels:
    heritage: "Tiller"
    release: "washing-panther"
    chart: "croc-hunter-0.3.1"
    component: "washing-panther-croc-hunter"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: "washing-panther-croc-hunter"
  template:
    metadata:
      labels:
        heritage: "Tiller"
        release: "washing-panther"
        chart: "croc-hunter-0.3.1"
        component: "washing-panther-croc-hunter"
    spec:
      containers:
        - name: washing-panther-croc-hunter
          image: "quay.io/lachie83/croc-hunter:latest"
          imagePullPolicy: "Always"
          ports:
          - name: http
            containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
