Module9/croc-hunt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: k8s-workshop-ingress
spec:
 rules:
 - http:
     paths:
     - path: /
       backend:
         serviceName: washing-panther-croc-hunter
         servicePort: 80
   host: k8sworkshop.com
